[package]
name = "udp_calculator"
version = "0.1.0"
edition = "2021"
default-run = "udp_calculator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rustls = "0.22.2"
tokio-rustls = "0.25.0"
